--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mantine/hooks": "^7.13.0",
     "@tabler/icons": "^3.19.0",
     "@tabler/icons-react": "^3.19.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shadcn-ui": "^0.9.2",
     "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
